# SubCellSpace

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  DATABASE_PLAN.md  DATASETS.md  README.md  THIRD_PARTY_TOOLS.md  environment.yml  package-lock.json  package.json  plan.md  pyproject.toml  task_progress.md
.github/workflows/: ci.yml
.snakemake/metadata/: L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuL3BhdGNoaWZ5X3Jlc29sdmVkLnBhcnF1ZXQ=  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvZGlzY292ZXJfZG9uZS50eHQ=  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvbl9wYXRjaGVzLnR4dA==  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvc2VnbWVudGVkLzAuZG9uZQ==  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvc2VnbWVudGVkLzEuZG9uZQ==  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvc2VnbWVudGVkLzIuZG9uZQ==  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvc2VnbWVudGVkLzMuZG9uZQ==  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvc2VnbWVudGVkLzQuZG9uZQ==  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvc2VnbWVudGVkLzUuZG9uZQ==  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvc2VnbWVudGVkLzYuZG9uZQ==  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvc2VnbWVudGVkLzcuZG9uZQ==  L3RtcC9wYXRjaGlmeV9zbmFrZW1ha2VfcnVuLy5zbmFrZW1ha2VfY2FjaGUvc2VnbWVudGVkLzguZG9uZQ==
config/: pipeline.yaml
data/: database_info_CosMX.csv  database_info_MERFISH.csv  database_info_Xenium.csv  database_info_Xenium_temp.csv  datasets.csv  datasets.db  id_mapping.csv
docs/: pipeline-design-v2.md  setup-guide.md
frontend/: DEV_PLAN.md  IMPLEMENTATION_STATUS.md  README.md  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts
frontend/scripts/: dev.mjs
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/__tests__/: ErrorBoundary.test.tsx  api.test.ts
frontend/src/components/: AdaptiveScatterPlot.tsx  BackendSwitch.tsx  CanvasScatterPlot.tsx  CellDetailPanel.tsx  DonutChart.tsx  ErrorBoundary.tsx  InteractiveScatterPlot.tsx  LoadingSkeleton.tsx  PipelineFlowChart.tsx  RunSelector.tsx
frontend/src/hooks/: useQueries.ts
frontend/src/pages/: BenchmarkDashboard.tsx  BenchmarkPage.tsx  DataBrowser.tsx  DataEditor.tsx  HomePage.tsx  LayerViewer.tsx  ReportPage.tsx
frontend/src/types/: datasets.ts
scripts/: benchmark_all_backends.py  build_database.py  cluster_xen_unzip.sh  reproduce.sh  scrape_xenium_doi.py  setup-step0.sh  setup-step1.sh  setup-step2.sh  setup-step3.sh  setup-tools.sh  sync_xen_geo.sh  test_all_backends.py  xen_extract_array.slurm
src/: __init__.py  __main__.py  api_server.py  benchmark.py  cli.py  config.py  constants.py  errors.py  models.py  pipeline.py  pipeline_engine.py  registry.py  validation.py
src/database/: __init__.py  builder.py  exporter.py  schema.py
src/evaluation/: __init__.py  metrics.py
src/io/: __init__.py  base.py  cosmx.py  merfish.py  stereoseq.py  xenium.py
src/pipelines/: __init__.py  cosmx_minimal.py
src/steps/: __init__.py  analysis.py  annotation.py  denoise.py  patchify.py  segmentation.py  spatial_analysis.py  spatial_domain.py  subcellular_analysis.py  subcellular_spatial_domain.py
tests/: conftest.py  test_analysis.py  test_annotation.py  test_api_server.py  test_config.py  test_denoise.py  test_evaluation.py  test_io.py  test_models.py  test_pipeline.py  test_pipeline_engine.py  test_segmentation.py  test_spatial_domain.py  test_subcellular_spatial_domain.py  test_validation.py
tools/: urls.yaml
workflow/: Snakefile
